# Rubric

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  _Deparsed_XSubs.pm
cmake/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
examples/: exampleapp.cpp
examples/twitter/: TwitterApp.cpp  TwitterApp.h  main.cpp  main_two.cpp  model.cpp  model.h  rxcurl.cpp  rxcurl.h  tweets.cpp  tweets.h  util.h
include/: Application.h  Display.h  DisplayManager.h  Object.h  Rubric.h  Type.h  View.h  Window.h
include/core/: Event.h  MainLoop.h  Object.h  Property.h  PropertyDef.h  PropertySpecializations.h  RunLoop.h  Type.h
include/draw/: Context.h  Display.h  DisplayManager.h  Frame.h  Renderer.h  Surface.h
include/ui/: Application.h  Control.h  LayoutManager.h  View.h  Window.h
proto/: application.proto  meta.proto  object.proto  property.proto  style.proto  view.proto  window.proto
src/: main.cpp
src/core/: Application.cpp  Composer.cpp  Composer.h  Context.cpp  Context.h  Event.cpp  MainLoop.cpp  Object.cpp  Property.cpp  Property.h  PropertyDef.cpp  PropertyDef.h  RunLoop.cpp  RunLoop.h  Type.cpp  URL.cpp  URL.h
src/draw/: Backend.cpp  Backend.h  Context.cpp  Display.cpp  DisplayManager.cpp  DisplayManager.h  Frame.cpp  Frame.h  Image.cpp  Image.h  Painter.cpp  Painter.h  Region.cpp  Region.h  RenderNode.cpp  RenderNode.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Transform.cpp  Transform.h
src/draw/X11/: X11Backend.cpp  X11Backend.h  X11Display.cpp  X11Display.h  X11EventHandler.h  X11Surface.cpp  X11Surface.h
src/draw/blend2d/: Blend2DRenderer.cpp  Blend2DRenderer.h
src/draw/css/: BasicShapeFunctions.cpp  BasicShapeFunctions.h  CSSAspectRatioValue.h  CSSBasicShapes.cpp  CSSBasicShapes.h  CSSBorderImage.cpp  CSSBorderImage.h  CSSBorderImageSliceValue.cpp  CSSBorderImageSliceValue.h  CSSCalculationValue.cpp  CSSCalculationValue.h  CSSCanvasValue.cpp  CSSCanvasValue.h  CSSComputedStyleDeclaration.cpp  CSSComputedStyleDeclaration.h  CSSContentDistributionValue.h  CSSCrossfadeValue.cpp  CSSCrossfadeValue.h  CSSCursorImageValue.cpp  CSSCursorImageValue.h  CSSCustomIdentValue.cpp  CSSCustomIdentValue.h  CSSCustomPropertyValue.cpp  CSSCustomPropertyValue.h  CSSDefaultStyleSheets.cpp  CSSDefaultStyleSheets.h  CSSFilterImageValue.cpp  CSSFilterImageValue.h  CSSFontFace.cpp  CSSFontFace.h  CSSFontFaceRule.cpp  CSSFontFaceRule.h  CSSFontFaceSet.cpp  CSSFontFaceSet.h  CSSFontFaceSource.cpp  CSSFontFaceSource.h  CSSFontFaceSrcValue.cpp  CSSFontFaceSrcValue.h  CSSFontFamily.h  CSSFontFeatureValue.cpp  (+200 more)
src/draw/css/parser/: CSSAtRuleID.cpp  CSSAtRuleID.h  CSSDeferredParser.cpp  CSSDeferredParser.h  CSSParser.cpp  CSSParser.h  CSSParserContext.cpp  CSSParserContext.h  CSSParserFastPaths.cpp  CSSParserFastPaths.h  CSSParserIdioms.cpp  CSSParserIdioms.h  CSSParserImpl.cpp  CSSParserImpl.h  CSSParserObserverWrapper.h  CSSParserSelector.cpp  CSSParserSelector.h  CSSParserToken.cpp  CSSParserToken.h  CSSParserTokenRange.cpp  CSSParserTokenRange.h  CSSPropertyParser.cpp  CSSPropertyParser.h  CSSPropertyParserHelpers.cpp  CSSPropertyParserHelpers.h  CSSSelectorParser.cpp  CSSSelectorParser.h  CSSSupportsParser.cpp  CSSTokenizer.cpp  CSSTokenizer.h  CSSTokenizerInputStream.cpp  CSSTokenizerInputStream.h  CSSVariableParser.cpp  CSSVariableParser.h  MediaQueryBlockWatcher.cpp  MediaQueryParser.cpp  MediaQueryParser.h  SizesAttributeParser.cpp  SizesAttributeParser.h  SizesCalcParser.cpp  (+1 more)
src/draw/css/typedom/: StylePropertyMap.h  StylePropertyMapReadOnly.cpp  StylePropertyMapReadOnly.h  TypedOMCSSImageValue.h  TypedOMCSSStyleValue.h  TypedOMCSSUnitValue.h  TypedOMCSSUnparsedValue.h
src/draw/text/: Context.cpp  Context.h  Font.cpp  Font.h  GlyphItem.cpp  GlyphItem.h  Item.cpp  Item.h  Layout.cpp  Layout.h
src/draw/wayland/: WaylandBackend.cpp  WaylandBackend.h  WaylandDisplay.cpp  WaylandDisplay.h  WaylandSurface.cpp  WaylandSurface.h
src/ui/: Application.cpp  Composer.cpp  Composer.h  Container.cpp  Container.h  Context.cpp  Control.cpp  Label.cpp  Label.h  LayoutManager.cpp  View.cpp  Window.cpp
tests/: ObjectTests.cpp  PropertyTests.cpp  TypeTests.cpp  WindowTests.cpp
tests/core/: ComposerTests.cpp  ObjectTests.cpp  PropertyTests.cpp  TypeTests.cpp  WindowTests.cpp
tests/ui/: ComposerTests.cpp  WindowTests.cpp
